@startuml
hide empty members
' yangzhou.persistence — schema 实体概念图(V1__core.sql + V2__workflow.sql + V12__github_config.sql)
' 只画领域字段;infra(id/objectId/createdAt/updatedAt/passwordHash/lastItemNumber)不画;
' parentId 不画,反转为父侧 children(List)。真相源是 Flyway schema:改表必须同步此图(AGENTS.md「类图」)。
hide empty members
skinparam classAttributeIconSize 0

class Workspace {
  name: String
}
class Member {
  username: String?
  displayName: String
  githubUsername: String?
}
class AttributeDefinition {
  name: String
  kind: String
  leveled: Boolean
}
class Capability {
  level: Int?
}
class Project {
  key: String
  name: String
}
class ProjectMember
class Status {
  name: String
  icon: String?
  isStart: Boolean
  isFinal: Boolean
  position: Int
}
class StatusTransition
class ProjectRepo {
  repo: String
}
class ItemGitRef {
  kind: String
  repo: String
  ref: String
  url: String?
  state: String?
}
class ProjectWorkflowRule {
  eventType: String
}
class Team {
  name: String
}
class Item {
  number: Int
  title: String
  description: String?
  type: String
  startDate: LocalDate?
  dueDate: LocalDate?
  children: List<Item>
}
class Notification {
  kind: String
  oldValue: String?
  newValue: String?
  readAt: Instant?
}
class TimeEntry {
  startedAt: Instant
  endedAt: Instant?
  minutes: Int?
  note: String?
}
class ChecklistItem {
  text: String
  done: Boolean
  position: Int
}
class ItemDependency
class Requirement {
  minLevel: Int?
}

Workspace "1" *-- "*" Member : 目录
Workspace "1" *-- "*" AttributeDefinition : 词表
Workspace "1" *-- "*" Team : 分组
Team "1" *-- "*" TeamMember
TeamMember "*" *-- "1" Member

Workspace "1" *-- "*" Project

Member "1" *-- "*" Capability
Capability "*" *-- "1" AttributeDefinition

Project "1" *-- "*" Item : 编号序列
Project "1" *-- "*" Status
Project "1" *-- "*" StatusTransition
Project "1" *-- "*" ProjectMember : 成员池
Project "1" *-- "*" ProjectRepo : GitHub 仓库
Project "1" *-- "*" ProjectWorkflowRule
ProjectWorkflowRule "*" --> "1" Status : 目标列
Item "1" *-- "*" ItemGitRef : 分支/PR 链接
ProjectMember "*" *-- "1" Member

note right of ProjectMember
  池规则(V3.5-B, Q6 同款):
  表无行 = 全 workspace 池可用(存量零配置);
  有行 = 仅池内可指派/进候选。
  删成员:本表行随 FK 级联清,
  item.assignee 由 FK 置空(V5)。
end note

Item "父 0..1" o-- "children *" Item : 同质树(防环)

Item "负责人 0..1" --> "1" Member : assignee(删人置空)
Item "创建者 0..1" --> "1" Member : createdBy(V7)
Notification "*" --> "1" Member : 收件人
Notification "*" --> "1" Item
TimeEntry "*" --> "1" Item : 工时
TimeEntry "*" --> "1" Member : 记录人
ChecklistItem "*" --> "1" Item : 检查清单
ItemDependency "*" --> "1" Item : 本 item(被阻塞方)
ItemDependency "*" --> "1" Item : 依赖的 item
Item "*" *-- "1" Status : 当前状态
Item "1" *-- "*" Requirement
Requirement "*" *-- "1" AttributeDefinition

StatusTransition "*" --> "from 1" Status
StatusTransition "*" --> "to 1" Status

note right of ProjectWorkflowRule
  事件 ∈ {branch_created, pr_opened,
  pr_merged, pr_closed_unmerged};
  (project, event) 唯一 = 4 槽映射;
  GitHub 事件永不知道状态名。
end note
note right of ItemGitRef
  uk(repo, kind, ref) 是轮询
  幂等锚点(V6-S2 用)。
end note
note bottom of StatusTransition
  迁移表无行 = 自由迁移(V1 默认);
  有行 = 仅列出的 from→to 合法。
end note
note right of Member
  凭据(password_hash)可空:
  空 = 虚拟成员(只参与匹配,不登录)。
  Team 为纯分组(池),匹配/候选
  在全 workspace 成员池上算。
end note
note right of Notification
  kind ∈ {status_changed, assigned,
  commented};动作按钮不落库:
  读时现算「下一列」(V7-Q3)。
end note
note right of ItemDependency
  阻塞语义:depends_on 未终态
  → 本 item ⛔ 被阻塞(仅标识);
  增依赖沿链查环。
end note
note right of Item
  number 为项目内递增编号,
  对外展示为 "{key}-{number}"(如 CHE-1)。
  type ∈ {task, bug, goal, story}。
end note
@enduml
